# FastAPI_Template

./: .gitignore  app.py  pyproject.toml
alembic/: env.py
api/: healthcheck.py
api/v1/: __init__.py
api/v1/controller/: user.py
config/: settings.py
constants/: error_message.py
context/: context_manager.py
db/: base.py  base_class.py  db.py
logger/: __init__.py
models/: user.py
repository/: base.py  user.py
schemas/: base.py  user.py
scripts/: init_db.sql
services/: user.py
utils/: helper.py  password_hasher.py
