[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["DatHT22"]
readme = "README.md"
packages = [{include = "backend"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.101.0"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
alembic = "^1.11.2"
psycopg2-binary = "^2.9.7"
python-dotenv = "^1.0.0"
sqlalchemy = "^2.0.19"
contextvars = "^2.4"
pydantic = "^2.1.1"
pytz = "^2023.3"
passlib = "^1.7.4"
bcrypt = "^4.0.1"
pyjwt = "^2.8.0"
pytest = "^7.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
